--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://aarhj6gt9qvvbk.cqx0bmixuv49.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
