--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,24 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	
+
 	<groupId>com.revature</groupId>
 	<artifactId>TheAvengersLeague</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>TheAvengersLeague</name>
 	<description>Team-1's project-2 backend application.</description>
-	
+
 	<properties>
 		<java.version>1.8</java.version>
+		<sonar.organization>icy105</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 
 	<dependencies>
