--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-spring.datasource.driver-class-name=
 spring.datasource.url=jdbc:postgresql://aarbdf92i6isc0.cqx0bmixuv49.us-east-2.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.profiles.active=prod
 
-spring.h2.console.settings.web-allow-others=true
+spring.mvc.view.suffix = .html
+
+server.servlet.context-path=/api
+server.port=5000
