--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://aarbdf92i6isc0.cqx0bmixuv49.us-east-2.rds.amazonaws.com:5432/postgres
+spring.datasource.url=jdbc:postgresql://team-1-p2.cvtq9j4axrge.us-east-1.rds.amazonaws.com:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
